// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <NewsArticle /> renders action with internal route correctly 1`] = `
<article
  class="NewsArticle"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="NewsArticle-body"
  >
    <figure
      class="Image NewsArticle-image isLoading"
    >
      <div
        class="Image-wrapper"
      >
        <img
          alt="title"
          src="imageUrl"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader-animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <section
      class="NewsArticle-meta"
    >
      <div
        class="NewsArticle-posted"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
         
        <span>
          Posted
        </span>
         
        <time
          class="DateTime"
          datetime="2017-10-10T18:00:00"
          title="Tuesday, October 10, 2017, 6:00 PM"
        >
          <span>
            3 months ago
          </span>
        </time>
         
        <span>
          by
        </span>
         author
      </div>
      <div
        class="Type Type-type"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M23 12l-2.44-2.78.34-3.68-3.61-.82-1.89-3.18L12 3 8.6 1.54 6.71 4.72l-3.61.81.34 3.68L1 12l2.44 2.78-.34 3.69 3.61.82 1.89 3.18L12 21l3.4 1.46 1.89-3.18 3.61-.82-.34-3.68L23 12zm-10 5h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
         News
      </div>
    </section>
    <section
      class="NewsArticle-content"
    >
      <div
        class="NewsArticle-contentText"
      >
        <p>
          content
        </p>
      </div>
      <div
        class="ButtonBar NewsArticle-action"
      >
        <a
          class="Button"
          href="route"
        >
          text
        </a>
      </div>
    </section>
  </div>
</article>
`;

exports[`[presentation] <NewsArticle /> renders action with internal route correctly 2`] = `
<article
  class="NewsArticle"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="NewsArticle-body"
  >
    <figure
      class="Image NewsArticle-image isLoading"
    >
      <div
        class="Image-wrapper"
      >
        <img
          alt="title"
          src="imageUrl"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader-animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <section
      class="NewsArticle-meta"
    >
      <div
        class="NewsArticle-posted"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
         
        <span>
          Posted
        </span>
         
        <time
          class="DateTime"
          datetime="2017-10-10T18:00:00"
          title="Tuesday, October 10, 2017, 6:00 PM"
        >
          <span>
            3 months ago
          </span>
        </time>
         
        <span>
          by
        </span>
         author
      </div>
      <div
        class="Type Type-type"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M23 12l-2.44-2.78.34-3.68-3.61-.82-1.89-3.18L12 3 8.6 1.54 6.71 4.72l-3.61.81.34 3.68L1 12l2.44 2.78-.34 3.69 3.61.82 1.89 3.18L12 21l3.4 1.46 1.89-3.18 3.61-.82-.34-3.68L23 12zm-10 5h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
         News
      </div>
    </section>
    <section
      class="NewsArticle-content"
    >
      <div
        class="NewsArticle-contentText"
      >
        <p>
          content
        </p>
      </div>
      <div
        class="ButtonBar NewsArticle-action"
      >
        <a
          class="Button"
          href="url"
          rel="noopener"
          target="_blank"
        >
          text
        </a>
      </div>
    </section>
  </div>
</article>
`;

exports[`[presentation] <NewsArticle /> renders correctly 1`] = `
<article
  class="NewsArticle"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="NewsArticle-body"
  >
    <figure
      class="Image NewsArticle-image isLoading"
    >
      <div
        class="Image-wrapper"
      >
        <img
          alt="title"
          src="imageUrl"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader-animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <section
      class="NewsArticle-meta"
    >
      <div
        class="NewsArticle-posted"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
         
        <span>
          Posted
        </span>
         
        <time
          class="DateTime"
          datetime="2017-10-10T18:00:00"
          title="Tuesday, October 10, 2017, 6:00 PM"
        >
          <span>
            3 months ago
          </span>
        </time>
         
        <span>
          by
        </span>
         author
      </div>
      <div
        class="Type Type-type"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M23 12l-2.44-2.78.34-3.68-3.61-.82-1.89-3.18L12 3 8.6 1.54 6.71 4.72l-3.61.81.34 3.68L1 12l2.44 2.78-.34 3.69 3.61.82 1.89 3.18L12 21l3.4 1.46 1.89-3.18 3.61-.82-.34-3.68L23 12zm-10 5h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
         News
      </div>
    </section>
    <section
      class="NewsArticle-content"
    >
      <div
        class="NewsArticle-contentText"
      >
        <p>
          content
        </p>
      </div>
    </section>
  </div>
</article>
`;

exports[`[presentation] <NewsArticle /> updates \`isImageLoaded\` state when image has loaded 1`] = `
<article
  class="NewsArticle isRendered"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="NewsArticle-body"
  >
    <figure
      class="Image NewsArticle-image isRendered"
    >
      <div
        class="Image-wrapper"
      >
        <img
          alt="title"
          src="imageUrl"
        />
      </div>
    </figure>
    <section
      class="NewsArticle-meta"
    >
      <div
        class="NewsArticle-posted"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
         
        <span>
          Posted
        </span>
         
        <time
          class="DateTime"
          datetime="2017-10-10T18:00:00"
          title="Tuesday, October 10, 2017, 6:00 PM"
        >
          <span>
            3 months ago
          </span>
        </time>
         
        <span>
          by
        </span>
         author
      </div>
      <div
        class="Type Type-type"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M23 12l-2.44-2.78.34-3.68-3.61-.82-1.89-3.18L12 3 8.6 1.54 6.71 4.72l-3.61.81.34 3.68L1 12l2.44 2.78-.34 3.69 3.61.82 1.89 3.18L12 21l3.4 1.46 1.89-3.18 3.61-.82-.34-3.68L23 12zm-10 5h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
         News
      </div>
    </section>
    <section
      class="NewsArticle-content"
    >
      <div
        class="NewsArticle-contentText"
      >
        <p>
          content
        </p>
      </div>
    </section>
  </div>
</article>
`;

exports[`[presentation] <NewsArticle /> updates \`isImageLoaded\` state when image has previously been loaded 1`] = `
<article
  class="NewsArticle isRendered"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="NewsArticle-body"
  >
    <figure
      class="Image NewsArticle-image isRendered"
    >
      <div
        class="Image-wrapper"
      >
        <img
          alt="title"
          src="imageUrl"
        />
      </div>
    </figure>
    <section
      class="NewsArticle-meta"
    >
      <div
        class="NewsArticle-posted"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
         
        <span>
          Posted
        </span>
         
        <time
          class="DateTime"
          datetime="2017-10-10T18:00:00"
          title="Tuesday, October 10, 2017, 6:00 PM"
        >
          <span>
            3 months ago
          </span>
        </time>
         
        <span>
          by
        </span>
         author
      </div>
      <div
        class="Type Type-type"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M23 12l-2.44-2.78.34-3.68-3.61-.82-1.89-3.18L12 3 8.6 1.54 6.71 4.72l-3.61.81.34 3.68L1 12l2.44 2.78-.34 3.69 3.61.82 1.89 3.18L12 21l3.4 1.46 1.89-3.18 3.61-.82-.34-3.68L23 12zm-10 5h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
         News
      </div>
    </section>
    <section
      class="NewsArticle-content"
    >
      <div
        class="NewsArticle-contentText"
      >
        <p>
          content
        </p>
      </div>
    </section>
  </div>
</article>
`;
